# Soft-Renderer

./: .editorconfig  .gitignore  CMakeLists.txt  README.md  render.sln  sildes.md
include/glad/: glad.h
lib/: glfw3.lib
render/: Camera.cpp  Camera.h  FrameBuffer.cpp  FrameBuffer.h  Light.cpp  Light.h  Material.cpp  Material.h  Math.cpp  Math.h  Mesh.cpp  Mesh.h  Object.cpp  Object.h  Pipline.h  Renderer.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  Vertex.h  glad.c  line.cpp  main.cpp  render.vcxproj  render.vcxproj.filters  tgaimage.cpp  tgaimage.h
src/: Camera.cpp  Camera.h  FrameBuffer.cpp  FrameBuffer.h  Light.cpp  Light.h  Material.cpp  Material.h  Math.cpp  Math.h  Mesh.cpp  Mesh.h  Object.cpp  Object.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Utils.h  main.cpp  test.h
